# xolo

./: .env.dev  .gitignore  LICENSE  README.md  deploy.sh  docker-compose.yml  publish.sh  pyproject.toml  rebuild_install_commonx.sh  reload.sh  requirements.txt  zensical.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: 3-task.yml
.github/workflows/: ci.yml  docs-ci.yml  docs.yml  publish.yml  run_test.yml
docs/: api-reference.md  authentication.md  client.md  development.md  entity-operations.md  error-handling.md  index.md
scripts/: bulk_authorize_users.py  bulk_create_authorize_users.py
tests/: .env  acl.py  conftest.py  test_abac.py  test_acl.py  test_evaluator.py  test_license.py  test_xolo_acl.py  test_xolo_client.py  xolotest.py
tests/client/: test_client_abac.py  test_client_acl.py  test_client_apikeys.py  test_client_contracts.py  test_client_core.py  test_client_gaps.py  test_client_ngac.py  test_client_policies.py  test_client_rbac.py  test_client_scopes_licenses.py  test_client_users.py
tests/policies/: p1.json  policies.json  r1.json  requests.json
xolo/abac/: __init__.py  communities.py  evaluator.py  graph.py  loader.py  matcher.py
xolo/abac/models/: __init__.py
xolo/acl/: __init__.py  acl.py
xolo/client/: __init__.py  client.py
xolo/client/errors/: __init__.py
xolo/client/interfaces/: auth.py
xolo/client/models/: __init__.py
xolo/license/: __init__.py
xolo/log/: __init__.py
xolo/policies/: __init__.py
xolo/policies/parser/: __init__.py  executor.py  models.py
xolo/utils/: __init__.py  utils.py
